# one-engine

./: .eleventy.js  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  conversation.md  conversation_canvas.html  deploy.sh  one-engine.service  package-lock.json  package.json  run_dev.sh  test_consciousness.sh
.github/workflows/: ci-full.yml  ci.yml  deploy-canvas.yml  ide-ci.yml
apps/ide/: package-lock.json  package.json  tsconfig.json
apps/ide/app/: page.tsx  (+1 more)
docs/: RESEARCH_DRAFT.md  catalog.json  cloudflare_code_mode_setup.md  index.html  integration-guide.md  observability.md  plan.dot
docs/achievements/: index.html
docs/features/: conversation-canvas.html  graph-ui-timeline.html  templates-panel.html
docs/patterns/: autodoc-navigation.html  conversational-api-evolution.html  emergent-string-ops.html  hitl-governance.html
docs_src/: achievements.njk  features.njk  index.njk  patterns.njk
docs_src/_data/: catalog.js
docs_src/_includes/: layout.njk
graphlogue/: __init__.py  cli.py  demo.py  sse.py  store.py  swechat.py
logs/: ci_user_journey_report.md  proof.receipt.json
out_one_engine/: 01_define_echo_ephemeral.json  02_call_echo_ephemeral.json  04_approve_echo.json  05_call_echo_persisted.json  06_call_echo_after_utir.json  branch_id.txt  conversation_create.json  events_all.json  events_tail.json  git_log.txt  n2_approve_slugify.json  n5_approve_reverse.json  n8_approve_counter.json  next_nudges_events_tail.json  utir_allowed_domain.json  utir_blocked_shell.json  utir_disallowed_domain.json  version.json
outputs/: feature_plan.md  persisted_note.txt
proofs/: HELLO_ENGINE.txt
scripts/: bootstrap_ide.sh  build_canvas_site.sh  ci_user_journey.sh  conversation_demo.sh  create_production_branch.sh  emergence_demo.sh  generate_merge_report.sh  governance_check.sh  log_conversation.sh  make_proof_pack.sh  open_canvas.sh  run_utir.sh  seed_graph_demo.sh  telemetry_run.sh  utir_to_dot.sh
site/: index.html
src/: api.rs  branch.rs  chat.rs  compiler.rs  conversation.rs  events.rs  lib.rs  main.rs  memory.rs  meta.rs  parser.rs  schema.rs  utir.rs
utir/: ci_loop.utir  meta2_boot.utir
(+38 files in other folders)
