[package]
name = "one-engine"
version = "0.1.0"
edition = "2021"
authors = ["Meta² Team"]
description = "Universal Task IR Engine with Innate Memory - integrates with Meta² orchestrator"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
sha2 = "0.10"
tempfile = "3.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.0"
semver = "1.0"
futures-util = { version = "0.3", features = ["sink"] }
tokio-stream = { version = "0.1", features = ["sync"] }
